# juno-txsign

./: .gitignore  Makefile  README.md  go.mod  go.sum
.github/workflows/: release.yml
api/: prepared_tx.v0.schema.json  signing_requests.v0.schema.json  spend_auth_sigs.v0.schema.json  txplan.v0.schema.json
cmd/juno-txsign/: main.go
docker/junocashd/: Dockerfile
internal/app/: app.go  app_e2e_test.go  app_integration_test.go  app_test.go  extsign_e2e_test.go  extsign_helpers_test.go  extsign_integration_test.go  sign_digest_e2e_test.go  sign_digest_helpers_test.go  sign_digest_integration_test.go  sign_digest_serve_e2e_test.go  txsign_helpers_test.go
internal/cli/: cli.go  cli_test.go  sign_digest_integration_test.go
internal/cliout/: cliout.go  cliout_test.go
internal/digestsign/: digestsign.go  digestsign_test.go  remote.go  remote_test.go
internal/digestsignhttp/: api.go  api_test.go
internal/ffi/: tx.go  witness.go
internal/plan/: plan.go  plan_test.go
internal/testutil/chain/: chain.go
internal/testutil/containers/: junocashd.go
internal/testutil/junocashdutil/: junocashdutil.go  notes.go  parse.go
internal/testutil/mnemonic/: mnemonic.go
internal/testutil/witness/: witness.go
pkg/txsign/: txsign.go
rust/juno-tx/: Cargo.toml
rust/juno-tx/include/: juno_tx.h
rust/juno-tx/src/: lib.rs  zip316.rs
rust/witness/: Cargo.toml
rust/witness/include/: juno_tx_witness.h
rust/witness/src/: lib.rs
