[package]
name = "juno_tx"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "juno_tx"
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
base64 = "0.22.1"
bech32 = "0.11.0"
bs58 = "0.5.1"
ff = "0.13.1"
f4jumble = "0.1.1"
hex = "0.4.3"
orchard = { version = "0.11.0", features = ["circuit"] }
rand = "0.8.5"
ripemd = "0.1.3"
sapling = { package = "sapling-crypto", version = "0.5.0" }
secp256k1 = "0.29.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
thiserror = "2.0.17"
transparent = { package = "zcash_transparent", version = "0.6.1", features = ["transparent-inputs"] }
zcash_note_encryption = "0.4.1"
zcash_primitives = { version = "0.26.1", features = ["transparent-inputs"] }
zcash_protocol = "0.7.2"
zcash_script = "0.4.2"
zip32 = "0.2.1"
zeroize = "1.8.2"
